--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@
  * Version: 1.0.0
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
- * Text Domain: dxstarter
+ * Text Domain: freedo
+ * Tags: two-columns, right-sidebar, featured-images, sticky-post, translation-ready, blog
  */
