--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -41,7 +41,11 @@
 		background: #eeeeee;
 	}
 	h2 {
-		padding-top: 10px;
+		padding-top: 2px;
+	}
+
+	.entry-meta {
+		padding-top:15px;
 	}
 	table {
 		text-align: left;
